# QuickDash

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  DOCS.md  LICENSE  Makefile.toml  README.md  bors.toml  rustfmt.toml
.github/workflows/: bors.yml  coverage.yml  crates.yml  rust.yml
Scripts/: README.md
Scripts/Linux/: Check.sh  Create.sh
Scripts/Windows/: Check.bat  Create.bat
src/: algorithms.rs  error.rs  lib.rs  main.rs  options.rs  util.rs  utilities.rs
src/hashing/: blake2b.rs  blake2s.rs  blake3.rs  crc32.rs  md5.rs  mod.rs  sha1.rs  sha2_224.rs  sha2_256.rs  sha2_384.rs  sha2_512.rs  sha3_224.rs  sha3_256.rs  sha3_384.rs  sha3_512.rs  whirlpool.rs  xxh3.rs  xxh32.rs  xxh64.rs
src/operations/: compare.rs  mod.rs  write.rs
src/ops/: compare.rs  mod.rs  write.rs
tests/: algo.rs
