[package]
name = "quickdash"
description = "A modern alternative to QuickSFV, written on Rust."
repository = "https://github.com/AndreVuillemot/QuickDash"
readme = "README.md"
keywords = ["cli", "hash", "verify"]
categories = ["authentication", "filesystem", "command-line-utilities"]
license = "Apache-2.0"
version = "0.5.8"
authors = ["cerda <cerdamods@protonmail.com", "b1tzxd"]
edition = "2021"

[dependencies]
once_cell = "1.8.0"
tabwriter = "1.2.1"
num_cpus = "1.13.0"
futures = { version = "0.3", features = ["executor", "thread-pool"] }
walkdir = "2.3.2"
regex = "1.5.4"
clap = "2.34.0"
crc32fast = "1.2.2"
pbr = "1.0.4"
blake2 = "0.10.0"
md-5 = "0.10.0"
blake3 = "1.2.0"
sha-1 = "0.10.0"
sha2 = "0.10.0"
sha3 = "0.10.0"
whirlpool = "0.10.0"
xxhash-rust = { version = "0.8.2", features = ["xxh32", "xxh64", "xxh3"] }

[profile.release]
lto = true
codegen-units = 1
debug = false
# panic = 'abort'

[[bin]]
name = "quickdash"
path = "src/main.rs"
test = false
doc = false

[lib]
name = "quickdash"
path = "src/lib.rs"
